# realsense-gstreamer

./: .gitignore  CMakeLists.txt  README.md  meson.build
examples/python/: gst_realsense_meta.py  simple.py  simple_launch.py  test_meta_api.py
scripts/: build-inspect.sh  cp2plugindir  launch.sh
src/: CMakeLists.txt  common.hpp  gstrealsensedemux.cpp  gstrealsensedemux.h  gstrealsensemeta.cpp  gstrealsensemeta.h  gstrealsenseplugin.c  gstrealsenseplugin.cpp  gstrealsenseplugin.h  gstrealsensesrc.cpp  gstrealsensesrc.h  meson.build  rsmux.hpp
